// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo agent delete "frodo agent delete --agent-id frodo-test-ig-agent": should display error when the agent with id 'frodo-test-ig-agent' cannot be deleted since it does not exist 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account frodo-test [b672336b-41ef-428d-ae4a-e0c082875377]
Agent 'frodo-test-ig-agent' not found!
"
`;

exports[`frodo agent delete "frodo agent delete --all": should do nothing when no agents can be deleted 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account frodo-test [b672336b-41ef-428d-ae4a-e0c082875377]
"
`;

exports[`frodo agent delete "frodo agent delete -a": should delete all agents 1`] = `""`;

exports[`frodo agent delete "frodo agent delete -i frodo-test-ig-agent": should delete the agent with id 'frodo-test-ig-agent' 1`] = `""`;
